--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "antd-mobile": "^2.1.3",
     "axios": "^0.17.1",
     "body-parser": "^1.18.2",
+    "cookie-parser": "^1.4.3",
     "es6-promise": "^4.2.2",
     "express": "^4.16.2",
     "mongoose": "^5.0.1",
@@ -44,6 +45,7 @@
     "redux-thunk": "^2.2.0",
     "socket.io": "^2.0.4",
     "socket.io-client": "^2.0.4",
+    "utility": "^1.13.1",
     "whatwg-fetch": "^2.0.3"
   }
 }
